# wad-matter-controller

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.agent/rules/: hierarchy.md
.agent/skills/integration_bridge/: SKILL.md
.agent/skills/librarian/: SKILL.md
.agent/skills/matter_architect/: SKILL.md
.agent/skills/pixel_smith/: SKILL.md
components/matter_bridge/: CMakeLists.txt  matter_bridge.cpp
components/ui_dashboard/: CMakeLists.txt  ui.c  ui_ipc.h
components/ui_dashboard/include/: ui.h
main/: CMakeLists.txt  app_main.cpp  app_state.c  app_state.h  display_driver.cpp  display_driver.h  gui_adapter.c  gui_adapter.h  idf_component.yml
